<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">Account</string>
    <string name="account_name">Account: %1$s</string>
    <string name="account_no_transactions">Transaction details are unavailable for this account type.</string>
    <string name="account_no_transactions_title">Unsupported Action</string>
    <string name="act_empty_msg">There are currently no accounts</string>
    <string name="act_trans_empty_msg">No recent transactions are available for this account.</string>
    <string name="act_trans_section_header">Transactions</string>
    <string name="act_trans_unsupported_msg">Transaction details are unavailable for this account type.</string>
    <string name="act_trans_unsupported_msg_title">Unsupported Action</string>
    <string name="activity_title_about">About</string>
    <string name="activity_title_account_transactions">Account Transactions</string>
    <string name="activity_title_accounts">Accounts</string>
    <string name="activity_title_ach">ACH</string>
    <string name="activity_title_alert_detail">Alert</string>
    <string name="activity_title_alerts">Alerts</string>
    <string name="activity_title_bill_payments">Bill Payments</string>
    <string name="activity_title_cards">Manage Cards</string>
    <string name="activity_title_cards_activate">Activate Card</string>
    <string name="activity_title_cards_reorder">Reorder Card</string>
    <string name="activity_title_cards_report">Report Lost or Stolen</string>
    <string name="activity_title_cards_status">Card Status</string>
    <string name="activity_title_cards_suspend">Suspend Card</string>
    <string name="activity_title_environment">Environment</string>
    <string name="activity_title_environment_settings">Environment Settings</string>
    <string name="activity_title_estatement">E-Statement</string>
    <string name="activity_title_financial_institution">Financial Institution</string>
    <string name="activity_title_licenses">Licenses</string>
    <string name="activity_title_locations">Locations</string>
    <string name="activity_title_make_deposit">Remote Deposit</string>
    <string name="activity_title_transfers">Transfers</string>
    <string name="activity_title_wires">Wires</string>
    <string name="alert_empty_message">No Alerts</string>
    <string name="amount">Amount</string>
    <string name="amount_hint">0.00</string>
    <string name="amount_sample">$1,578.50</string>
    <string name="analytics_disclosure">To assist Jack Henry &amp; Associates, Inc (“we” or “us”) in maintaining and improving this application, we use Google Analytics to\10        gather information about Customers\' usage of the application. For example, it lets us track how many visitors the application has,\10        which screens they spend time on, what kinds of operating systems and mobile devices they use, and how they found the application.\10        Google Analytics does not track, collect or upload any data that personally identifies an individual (such as a name, email address,\10        account number or billing information), or other data which can be reasonably linked to such information. The information we receive\10        helps us improve the performance of this application for you. For more information on Google\'s use of the data,\10        please see the website “How Google uses data when you use our partners\' sites or apps” located at\10http://www.google.com/policies/privacy/partners/.</string>
    <string name="app_name">Skyward Credit Union</string>
    <string name="app_redirect_title">Update Available</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="autoFocusOffMessage">Autofocus has been turned off.\10Please make sure image is\10clear when taking photo.</string>
    <string name="autoFocusOffTitle">Autofocus Deactivated</string>
    <string name="balance_value">Balance %s</string>
    <string name="btnContinue">Continue</string>
    <string name="btnUse">Use</string>
    <string name="btn_action_retake_image">Retake\10Image</string>
    <string name="btn_action_rotate_left">Rotate\10Left</string>
    <string name="btn_action_rotate_right">Rotate\10Right</string>
    <string name="btn_action_view_image">View\10Image</string>
    <string name="btn_activate">Activate</string>
    <string name="btn_another_card">%1$s Another Card</string>
    <string name="btn_approve">Approve</string>
    <string name="btn_back">Back</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_deposit">Deposit</string>
    <string name="btn_deposit_another">Deposit Another</string>
    <string name="btn_done">Done</string>
    <string name="btn_enroll">Enroll</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_home_screen">Home Screen</string>
    <string name="btn_initiate">Initiate</string>
    <string name="btn_locations">Locations</string>
    <string name="btn_login">Login</string>
    <string name="btn_no">No</string>
    <string name="btn_no_logout">No</string>
    <string name="btn_not_now">Not Now</string>
    <string name="btn_ok">OK</string>
    <string name="btn_pay_another">Make Another Payment</string>
    <string name="btn_quit">Quit</string>
    <string name="btn_remind_later">Remind Later</string>
    <string name="btn_reorder">Reorder</string>
    <string name="btn_report">Report</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="btn_search">Search</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_suspend">Suspend</string>
    <string name="btn_transfer_another">Make Another Transfer</string>
    <string name="btn_transmit">Transmit</string>
    <string name="btn_view_check">View Check</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_yes_logout">Yes</string>
    <string name="cameraPreviewImage">Camera Preview Image</string>
    <string name="camera_permission_needed">To access \"%1$s\" please enable the Camera permission under your device settings.</string>
    <string name="cancel_rda_terms">If you quit this registration process you will not have access to %1$s.</string>
    <string name="cancel_rda_terms_collect">If you do not accept these terms and conditions your %1$s access will be disabled. Are you sure?</string>
    <string name="cancel_terms">If you do not accept these terms and conditions your mobile access will be denied.\10Are you sure?</string>
    <string name="check">Check</string>
    <string name="checkOverLayBorderDesc">Border Image</string>
    <string name="checkOverLayFrame">Insert Check Here</string>
    <string name="check_back">Back</string>
    <string name="check_display_instructions">Please center your entire check within the outlines below. Make sure that the picture is clear, well-lit, and taken from above.</string>
    <string name="check_front">Front</string>
    <string name="check_image_subtitle">%4$s #%1$s for %2$s (%3$s)</string>
    <string name="check_image_x_of_x">Item %1$s of %2$s</string>
    <string name="checking_rda_status">Checking status…</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">%1$s won\'t run unless you update the Android Wear app.</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_balance">Balance</string>
    <string name="lbl_confirmation">Confirmation</string>
    <string name="lbl_currency">$</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_memo">Memo</string>
    <string name="lbl_memo_hint">memo</string>
    <string name="lbl_pay_from">Pay From</string>
    <string name="lbl_pay_from_account">Pay From Account</string>
    <string name="lbl_payee">Payee</string>
    <string name="lbl_payment_amount">Payment Amount</string>
    <string name="lbl_person_to_pay">Person to Pay</string>
    <string name="lbl_process_date">Process Date</string>
    <string name="lbl_select_account">Select Account…</string>
    <string name="lbl_select_date">Select Date…</string>
    <string name="lbl_select_payee">Select Payee…</string>
    <string name="lbl_transfer_date">Transfer Date</string>
    <string name="lbl_transfer_from">Transfer From</string>
    <string name="lbl_transfer_to">Transfer To</string>
    <string name="lbl_transid">Transaction ID</string>
    <string name="lbl_type">Type</string>
    <string name="no_connectivity">The Internet connection appears to be offline. You must be connected to the internet to use this app.</string>
    <string name="no_connectivity_settings">Settings…</string>
    <string name="no_connectivity_title">Network Unavailable</string>
    <string name="number_sample">99</string>
    <string name="place_holder">Place Holder</string>
    <string name="title_deposit_submitted">Your deposit has been submitted</string>
    <string name="title_payment_submitted">Your payment has been submitted</string>
    <string name="title_transfer_submitted">Your transfer has been submitted</string>
</resources>