<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/frag_layout" android:focusableInTouchMode="true" android:descendantFocusability="beforeDescendants" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:id="@+id/scroll_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/button_bar" android:layout_alignParentTop="true" style="@style/ScrollView">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@+id/person_panel" android:background="@drawable/list_item_first" android:paddingLeft="15dp" android:paddingTop="8dp" android:paddingRight="15dp" android:paddingBottom="8dp" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_gravity="center_vertical" android:id="@+id/person_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/lbl_person_to_pay" android:layout_toLeftOf="@+id/arrow_button_person" style="@style/Text.Medium"/>
                <TextView android:textColor="@color/tapTextViewColor" android:ellipsize="end" android:gravity="bottom" android:id="@+id/person" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_select_payee" android:singleLine="true" android:layout_toLeftOf="@+id/arrow_button_person" android:layout_below="@+id/person_label" style="@style/Text.Large.Bold.Indented"/>
                <ImageView android:id="@+id/arrow_button_person" android:duplicateParentState="true" android:layout_alignTop="@+id/person_label" android:layout_alignBottom="@+id/person" android:layout_alignParentRight="true" style="@style/Arrow.Circled"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/pay_from_panel" android:background="@drawable/list_item" android:paddingLeft="15dp" android:paddingTop="8dp" android:paddingRight="15dp" android:paddingBottom="8dp" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_gravity="center_vertical" android:id="@+id/pay_from_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_pay_from_account" android:layout_toLeftOf="@+id/arrow_button_pay_from" style="@style/Text.Medium"/>
                <TextView android:textColor="@color/tapTextViewColor" android:ellipsize="end" android:gravity="bottom" android:id="@+id/account" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/lbl_select_account" android:singleLine="true" android:layout_below="@+id/pay_from_label" style="@style/Text.Large.Bold.Indented"/>
                <TextView android:id="@+id/balance" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_balance" android:layout_below="@+id/account" style="@style/Text.Small.Indented"/>
                <ImageView android:id="@+id/arrow_button_pay_from" android:duplicateParentState="true" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/Arrow.Circled"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/amount_panel" android:background="@drawable/list_item_shadow_overlay" android:paddingLeft="15dp" android:paddingTop="8dp" android:paddingRight="15dp" android:paddingBottom="8dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/amount_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15dp" android:text="@string/lbl_payment_amount" style="@style/Text.Medium"/>
                <TextView android:textSize="18sp" android:gravity="center_vertical" android:id="@+id/currency_sign" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_currency" android:layout_toRightOf="@+id/amount_label" android:layout_alignTop="@+id/amount_edit" android:layout_alignBottom="@+id/amount_edit"/>
                <com.jackhenry.godough.core.widgets.DollarAmountEditText android:id="@+id/amount_edit" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/amount_hint" android:ems="8" android:maxLength="15" android:layout_toRightOf="@+id/currency_sign" android:layout_alignParentRight="true" android:imeOptions="actionDone" style="@style/EditText.SingleLine.NumberDecimal"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/date_panel" android:background="@drawable/list_item" android:paddingLeft="15dp" android:paddingTop="8dp" android:paddingRight="15dp" android:paddingBottom="8dp" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:layout_gravity="center_vertical" android:id="@+id/date_label" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/lbl_process_date" android:layout_toLeftOf="@+id/arrow_button_date" style="@style/Text.Medium"/>
                <TextView android:textColor="@color/tapTextViewColor" android:ellipsize="end" android:gravity="bottom" android:id="@+id/date" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/lbl_select_date" android:singleLine="true" android:layout_toLeftOf="@+id/arrow_button_date" android:layout_below="@+id/date_label" style="@style/Text.Large.Bold.Indented"/>
                <TextView android:id="@+id/est_arrival" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/arrow_button_date" android:layout_below="@+id/date" style="@style/Text.Small.Indented"/>
                <ImageView android:id="@+id/arrow_button_date" android:duplicateParentState="true" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/Arrow.Circled"/>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/memo_panel" android:background="@drawable/list_item_last_shadow_overlay" android:paddingLeft="15dp" android:paddingTop="8dp" android:paddingRight="15dp" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/memo_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_memo" style="@style/Text.Medium"/>
                <com.jackhenry.godough.core.widgets.JhaEditText android:id="@+id/memo_edit" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:hint="@string/lbl_memo_hint" android:maxLength="300" android:layout_toRightOf="@+id/memo_label" android:layout_alignParentRight="true" style="@style/EditText.SingleLine.Text"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@+id/button_bar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" style="@style/ButtonBar.Bottom">
        <com.jackhenry.godough.core.widgets.ActionButton android:id="@+id/btn_cancel" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" android:layout_weight="1" app:buttonText="@string/btn_reset"/>
        <com.jackhenry.godough.core.widgets.ActionButton android:id="@+id/btn_submit" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" android:layout_weight="1" app:buttonText="@string/btn_submit" app:buttonIcon="@drawable/btn_icon_checkmark" app:buttonEnabled="false" app:buttonThemed="true"/>
    </LinearLayout>
</RelativeLayout>
