<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@+id/content" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/header_background" android:background="@drawable/dialog_header_info" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:src="@drawable/message_icon_general" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
            <ImageView android:id="@+id/iconRight" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5dp" android:src="@drawable/message_icon_general" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
            <TextView android:gravity="center_horizontal" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_connectivity_title" android:layout_toLeftOf="@+id/iconRight" android:layout_toRightOf="@+id/icon" android:layout_alignTop="@+id/icon" android:layout_alignBottom="@+id/icon" style="@style/DialogHeaderText"/>
        </RelativeLayout>
        <TextView android:id="@+id/message" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/no_connectivity"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:textSize="12sp" android:id="@android:id/button1" android:layout_width="0px" android:layout_height="wrap_content" android:text="@string/btn_exit" android:layout_weight="1"/>
            <Button android:textSize="12sp" android:id="@android:id/button2" android:layout_width="0px" android:layout_height="wrap_content" android:text="@string/btn_retry" android:layout_weight="1"/>
            <Button android:textSize="12sp" android:id="@android:id/button3" android:layout_width="0px" android:layout_height="wrap_content" android:text="@string/no_connectivity_settings" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
